# llamas-quicklook

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: 1_io.ipynb  2_rss_to_1dspec.ipynb
utils/: coadd.py  geometry.py  io.py  paths.py  plotting.py  whitelight.py
