[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamas-quicklook"
version = "0.1.0"
description = "Quick look tools for LLAMAS spectroscopic data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "astropy",
    "seaborn",
    "matplotlib",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["."]
